Postinstall autocommit message

--- a/src/app/add-edit-tally/add-edit-tally.component.html
+++ b/src/app/add-edit-tally/add-edit-tally.component.html
@@ -113,7 +113,8 @@
                                                 </small>
                                             </td>
                                             <td width="300">
-                                                <small class="link-color" *ngIf="tally.getHistory().length > 0" (click)="cleanHistory()">Töm historik</small>
+                                                <small class="link-color" *ngIf="tally.getHistory().length > 0"
+                                                    (click)="cleanHistory()">Töm historik</small>
                                                 <small class="link-color" *ngIf="tally.getHistory().length < 1">Töm historik</small>
                                             </td>
                                         </tr>
