--- a/src/app/add-example/add-example.component.html
+++ b/src/app/add-example/add-example.component.html
@@ -5,33 +5,35 @@
 <hr />
 
 <div class="clr-container">
-    
+
     <div class="clr-row">
-        <div class="clr-col-12"> 
-            <button class="btn btn-success-outline block" [disabled]="pushupAdded" (click)="addPushups()">Armhävningar</button>
+        <div class="clr-col-12">
+            <button class="btn btn-success-outline block" [disabled]="pushupAdded"
+                (click)="addPushups()">Armhävningar</button>
             <hr />
         </div>
     </div>
 
     <div class="clr-row">
-        <div class="clr-col-12"> 
+        <div class="clr-col-12">
             <button class="btn btn-success-outline block" [disabled]="plankAdded" (click)="addplank()">Plankan</button>
             <hr />
         </div>
     </div>
 
     <div class="clr-row">
-        <div class="clr-col-12"> 
+        <div class="clr-col-12">
             <button class="btn btn-success-outline block" [disabled]="squatsAdded" (click)="addSquats()">Squats</button>
             <hr />
         </div>
     </div>
 
     <div class="clr-row">
-        <div class="clr-col-12"> 
-            <button class="btn btn-success-outline block" [disabled]="workoutdaysAdded" (click)="addWorkoutDays()">Träningsdagar</button>
+        <div class="clr-col-12">
+            <button class="btn btn-success-outline block" [disabled]="workoutdaysAdded"
+                (click)="addWorkoutDays()">Träningsdagar</button>
             <hr />
         </div>
     </div>
-   
+
 </div>
