--- a/src/app/edit-tally-history/edit-tally-history.component.scss
+++ b/src/app/edit-tally-history/edit-tally-history.component.scss
@@ -28,6 +28,18 @@
                     color: $dangerColor;
                 }
             }
+            &.history-entry {
+                position: relative;
+
+                .delete-history {
+                    position: absolute;
+                    right: 20px;
+                    top: 20px;
+                    .close {
+                        color: #ff0000;
+                    }
+                }
+            }
         }
     }
 }
