--- a/src/app/tally/tally.component.html
+++ b/src/app/tally/tally.component.html
@@ -91,24 +91,19 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="3">
-                        <table>
-                            <tr>
-                                <td width="300">
-                                    <small *ngIf="tally.getHistory().length < 1">
-                                        Redigera historik
-                                    </small>
-                                    <small *ngIf="tally.getHistory().length > 0">
-                                        <a routerLink="/history/edit/{{tally.getUuid() }}">Redigera historik</a>
-                                    </small>
-                                </td>
-                                <td width="300">
-                                    <small class="link-color" *ngIf="tally.getHistory().length > 0"
-                                        (click)="cleanHistory()">Töm historik</small>
-                                    <small class="link-color" *ngIf="tally.getHistory().length < 1">Töm historik</small>
-                                </td>
-                            </tr>
-                        </table>
+                    <td width="300">
+                        <small *ngIf="tally.getHistory().length < 1">
+                            Redigera historik
+                        </small>
+                        <small *ngIf="tally.getHistory().length > 0">
+                            <a routerLink="/history/edit/{{tally.getUuid() }}">Redigera historik</a>
+                        </small>
+                    </td>
+                    <td width="300"><small class="link-color">Lägg till historik</small></td>
+                    <td width="300">
+                        <small class="link-color" *ngIf="tally.getHistory().length > 0" (click)="cleanHistory()">Töm
+                            historik</small>
+                        <small class="link-color" *ngIf="tally.getHistory().length < 1">Töm historik</small>
                     </td>
                 </tr>
             </tfoot>
