--- a/src/app/edit-tally-history/edit-tally-history.component.html
+++ b/src/app/edit-tally-history/edit-tally-history.component.html
@@ -18,12 +18,12 @@
                 <div class="clr-row" *ngFor="let history of tallyHistory; let i = index">
                     <div class="clr-col-7">
                         <label>{{ history.date | timeago }}</label>
-                        <input type="date" name="date{{i}}" max="{{ yesterday }}"
-                            [ngModel]="history.date | date:'yyyy-MM-dd'" />
+                        <input type="date" name="date-{{i}}" max="{{ yesterday }}"
+                            id="date_{{i}}" [value]="history.date | date:'yyyy-MM-dd'" />
                     </div>
                     <div class="clr-col-5">
                         <label>Värde</label>
-                        <input type="number" [(ngModel)]="history.value" name="value{{i}}" />
+                        <input type="number" min="1" [value]="history.value" name="value{{i}}" />
                     </div>
                     <div class="action-history" (click)="deleteHistory(history)">
                         <clr-icon class="close" shape="window-close"></clr-icon>
@@ -37,11 +37,12 @@
                     </div>
                     <div class="clr-col-5">
                         <label>Värde</label>
-                        <input type="number" #newValueInput [(ngModel)]="newHistory.value"
+                        <input type="number" min="1" #newValueInput [(ngModel)]="newHistory.value"
                             name="value{{tally.getHistory().length + 1}}" />
                     </div>
-                    <div class="action-history" (click)="addHistory()">
-                        <clr-icon class="add" shape="plus-circle"></clr-icon>
+                    <div class="action-history">
+                        <clr-icon class="add" *ngIf="!addNewHistoryValid()" shape="plus-circle"></clr-icon>
+                        <clr-icon class="add valid" (click)="addHistory()" *ngIf="addNewHistoryValid()" shape="plus-circle"></clr-icon>
                     </div>
                 </div>
 
@@ -49,7 +50,7 @@
                     <div class="clr-col-12 clear-history">
                         <small *ngIf="tally.getHistory().length < 1" class="btn btn-sm btn-link">Radera historik</small>
                         <button *ngIf="tally.getHistory().length > 0" class="btn btn-sm btn-link"
-                            (click)="cleanHistory()">Radera historik</button>
+                            (click)="cleanHistory()">Radera all historik</button>
                     </div>
                 </div>
             </form>
@@ -72,3 +73,6 @@
 <app-modal [modalData]="newDateChosenModalData" (parentEvent)="wrongDateConfirmed()"></app-modal>
 
 <app-modal [modalData]="deleteHistoryModalData" (parentEvent)="deleteHistoryConfirmed()"></app-modal>
+
+
+<pre>{{ tallyHistory | json }}</pre>
