--- a/src/app/edit-tally-history/edit-tally-history.component.scss
+++ b/src/app/edit-tally-history/edit-tally-history.component.scss
@@ -37,7 +37,10 @@
                     color: $dangerColor;
                 }
                 .add {
-                    color: $successColor;
+                    color: #ccc;
+                    &.valid{
+                        color: $successColor;
+                    }
                 }
 
             }
