--- a/src/app/add-edit-tally/add-edit-tally.component.html
+++ b/src/app/add-edit-tally/add-edit-tally.component.html
@@ -102,23 +102,9 @@
                         <tfoot>
                             <tr>
                                 <td colspan="3">
-                                    <table>
-                                        <tr>
-                                            <td width="300">
-                                                <small *ngIf="tally.getHistory().length < 1">
-                                                    Redigera historik
-                                                </small>
-                                                <small *ngIf="tally.getHistory().length > 0">
-                                                    <a routerLink="/history/edit/{{tally.getUuid() }}">Redigera historik</a>
-                                                </small>
-                                            </td>
-                                            <td width="300">
-                                                <small class="link-color" *ngIf="tally.getHistory().length > 0"
-                                                    (click)="cleanHistory()">Töm historik</small>
-                                                <small class="link-color" *ngIf="tally.getHistory().length < 1">Töm historik</small>
-                                            </td>
-                                        </tr>
-                                    </table>
+                                    <small *ngIf="tally.getHistory().length > 0">
+                                        <a routerLink="/history/edit/{{tally.getUuid() }}">Hantera historik</a>
+                                    </small>
                                 </td>
                             </tr>
                         </tfoot>
