--- a/src/app/edit-tally-history/edit-tally-history.component.html
+++ b/src/app/edit-tally-history/edit-tally-history.component.html
@@ -1,6 +1,6 @@
 <div class="clr-row">
     <div class="clr-col-12">
-        <a routerLink="/tally/tally.getUuid()">
+        <a routerLink="/tally/{{ tally.getUuid() }}">
             <clr-icon shape="undo"></clr-icon> &nbsp; <small>Tillbaka</small>
         </a>
     </div>
