--- a/src/app/history-summary/history-summary.component.html
+++ b/src/app/history-summary/history-summary.component.html
@@ -1,4 +1,4 @@
-<div class="clr-col-12 history">
+<div>
     <h4>Historik</h4>
     <small *ngIf="tally.getHistory().length < 1">Det finns ingen historik för denna räknare</small>
     <table class="table" *ngIf="tally.getHistory().length > 0">
