--- a/src/app/edit-tally-history/edit-tally-history.component.html
+++ b/src/app/edit-tally-history/edit-tally-history.component.html
@@ -19,7 +19,7 @@
                     <div class="clr-col-7">
                         <label>{{ history.date | timeago }}</label>
                         <input type="date" name="date-{{i}}" max="{{ yesterday }}"
-                            id="date_{{i}}" [value]="history.date | date:'yyyy-MM-dd'" />
+                            id="date_{{i}}" [ngModel]="history.date | date:'yyyy-MM-dd'" />
                     </div>
                     <div class="clr-col-5">
                         <label>Värde</label>
@@ -73,3 +73,6 @@
 <app-modal [modalData]="newDateChosenModalData" (parentEvent)="wrongDateConfirmed()"></app-modal>
 
 <app-modal [modalData]="deleteHistoryModalData" (parentEvent)="deleteHistoryConfirmed()"></app-modal>
+
+
+<pre>{{ tallyHistory | json }}</pre>
