History 2 reactive formarray 2

--- a/src/app/edit-tally-history2/edit-tally-history2.component.html
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.html
@@ -34,9 +34,9 @@
   
           <td>
   
-              Price:
+              Värde:
   
-              <input type="text" formControlName="price" class="form-control">
+              <input type="text" formControlName="value" class="form-control">
   
           </td>
   
@@ -62,6 +62,6 @@
   
     <br/>
   
-    {{this.historyForm.value | json}}
+    <pre>{{this.historyForm.value | json}}</pre>
   
   </div>
