--- a/src/app/edit-tally-history2/edit-tally-history2.component.html
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.html
@@ -36,7 +36,7 @@
   
               Värde:
   
-              <input type="text" formControlName="value" class="form-control">
+              <input type="number" formControlName="value" class="form-control">
   
           </td>
   
