History 2 reactive formarray 3 with dates

--- a/src/app/edit-tally-history2/edit-tally-history2.component.html
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.html
@@ -26,9 +26,9 @@
   
           <td>
   
-              Quantity :
+              Datum :
   
-              <input type="text" formControlName="qty" class="form-control">
+              <input type="datetime-local" max="{{ yesterday }}" formControlName="date" class="form-control">
   
           </td>
   
