--- a/src/app/edit-tally-history2/edit-tally-history2.component.html
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.html
@@ -1,3 +1,11 @@
+<div class="clr-row">
+    <div class="clr-col-12">
+        <a routerLink="/tally/{{ tally.getUuid() }}">
+            <clr-icon shape="undo"></clr-icon> &nbsp; <small>Tillbaka</small>
+        </a>
+    </div>
+</div>
+
 <div class="container">
 
   
