--- a/src/app/edit-tally-history2/edit-tally-history2.component.scss
+++ b/src/app/edit-tally-history2/edit-tally-history2.component.scss
@@ -1,22 +1,34 @@
-.flex-row {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.clr-row{
+    margin-bottom: 20px;
+    .clr-col-1{
+        line-height: 52px;
+    }
+}
+input{
+    width: 100%;
+    border: none;
+    border-bottom: .05rem solid #0072a3;
+    &:focus{
+        outline: none;
+    }
+}
+input[type="date"]{
+    font-weight: 100; 
 }
 
-.flex-col {
-    flex: 3;
-    background-color: lightcyan;
-    margin: 0 0 20px 0;
+input[type="date"]::-webkit-calendar-picker-indicator {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: auto;
+    height: auto;
+    color: transparent;
+    background: transparent;
 }
 
-.flex-col:first-child {
-    flex: 6;
-
-}
-
-.flex-col:last-child {
-    flex: 1;
-    text-align: right;
-
+.btn.add-new-history{
+    margin-right: 0;
+    margin-top: 0;
 }
